# jwt_auth

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_30_2051-9a94af158891_create_tables.py  2025_04_05_2252-779f0a758d06_add_outbox_table.py
app/: celery_config.py  config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_03_25_2336-75372eda179d_migration_first.py  2025_03_26_1935-1ae7f8fa6c93_delete_username_field_in_users_table.py  2025_03_26_2146-09cb629aa0cb_create_table.py
app/api/: __init__.py  auth.py  user.py
app/api/auth/: __init__.py  routes.py  schemas.py  service.py
app/core/: config.py  mail.py  redis_client.py  security.py
app/database/: crud.py  db.py
app/db/: repositories.py  session.py
app/db/models/: __init__.py  base.py  outbox.py  user.py
app/mail/: __init__.py  celery_config.py  tasks.py
app/messaging/: __init__.py  broker.py  streams.py
app/models/: base.py  user.py
app/schemas/: user.py
app/services/: auth.py
app/utils/: helpers.py
